# event_cnn_minimal

./: pyproject.toml
src/event_cnn_minimal/: parse_config.py
src/event_cnn_minimal/base/: base_trainer.py
src/event_cnn_minimal/logger/: logger.py
src/event_cnn_minimal/model/: legacy.py  loss.py  model.py  unet.py
src/event_cnn_minimal/trainer/: trainer.py
src/event_cnn_minimal/utils/: extract_images_MMP.py  henri_compatible.py  myutil.py  timers.py  training_utils.py
